feat: Iniciada a criação das calculadoras de bilirrubina, medicamentos e balanço hídrico

--- a/calculators/templates/calculators/index.html
+++ b/calculators/templates/calculators/index.html
@@ -6,4 +6,12 @@
 <button class="calculator-button" onclick="window.location.href='{% url 'bilirubin_calculator' %}'">
     Calculadora de Bilirrubina
 </button>
+
+<button class="calculator-button" onclick="window.location.href='{% url 'medications_calculator' %}'">
+    Calculadora de Medicamentos
+</button>
+
+<button class="calculator-button" onclick="window.location.href='{% url 'fluid_balance_calculator' %}'">
+    Balanço Hídrico
+</button>
 {% endblock %}
