--- a/calculators/templates/calculators/index.html
+++ b/calculators/templates/calculators/index.html
@@ -3,15 +3,17 @@
 {% block title %}Home - Neonatal Calculator Care{% endblock %}
 
 {% block content %}
-<button class="calculator-button" onclick="window.location.href='{% url 'bilirubin_calculator' %}'">
-    Calculadora de Bilirrubina
-</button>
+<div class="calculator-buttons-container">
+    <button class="calculator-button" onclick="window.location.href='{% url 'bilirubin_calculator' %}'">
+        Calculadora de Bilirrubina
+    </button>
 
-<button class="calculator-button" onclick="window.location.href='{% url 'medications_calculator' %}'">
-    Calculadora de Medicamentos
-</button>
+    <button class="calculator-button" onclick="window.location.href='{% url 'medications_calculator' %}'">
+        Calculadora de Medicamentos
+    </button>
 
-<button class="calculator-button" onclick="window.location.href='{% url 'fluid_balance_calculator' %}'">
-    Balanço Hídrico
-</button>
+    <button class="calculator-button" onclick="window.location.href='{% url 'fluid_balance_calculator' %}'">
+        Balanço Hídrico
+    </button>
+</div>
 {% endblock %}
