--- a/calculators/templates/calculators/medications.html
+++ b/calculators/templates/calculators/medications.html
@@ -10,7 +10,7 @@
         <div class="input-group">
             <div class="form-field">
                 <label for="birth-date">Data de Nascimento</label>
-                <input type="date" id="birth-date" name="birth-date" required>
+                <input type="date" id="birth-date" name="birth-date" value="{% now 'Y-m-d' %}" required>
             </div>
             
             <div class="form-field">
